objects/Facility__c.object
<CustomObject>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Headcount_1__c</fullName>
        <label>Actual Headcount 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Headcount_2__c</fullName>
        <label>Actual Headcount 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Headcount_3__c</fullName>
        <label>Actual Headcount 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Headcount__c</fullName>
        <formula>Actual_Headcount_1__c + Actual_Headcount_2__c + Actual_Headcount_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Cost_straightline_1__c</fullName>
        <label>Annual Lease Cost (straightline) 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Cost_straightline_2__c</fullName>
        <label>Annual Lease Cost (straightline) 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Cost_straightline_3__c</fullName>
        <label>Annual Lease Cost (straightline) 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Cost_straightline__c</fullName>
        <formula>Annual_Lease_Cost_straightline_1__c + Annual_Lease_Cost_straightline_2__c + Annual_Lease_Cost_straightline_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Lease Cost (straightline)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_per_Person_sq_ft_1__c</fullName>
        <formula>if( Capacity_1__c &gt;0, Square_Feet_1__c / Capacity_1__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area per Person (sq ft) 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_per_Person_sq_ft_2__c</fullName>
        <formula>if( Capacity_2__c&gt;0, Square_Feet_2__c / Capacity_2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area per Person (sq ft) 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_per_Person_sq_ft_3__c</fullName>
        <formula>if( Capacity_3__c&gt;0, Square_Feet_3__c / Capacity_3__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area per Person (sq ft) 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_per_Person_sq_ft__c</fullName>
        <formula>if( ( Capacity_1__c + Capacity_2__c + Capacity_3__c) &gt;0, ((Square_Feet_1__c + Square_Feet_2__c + Square_Feet_3__c) / ( Capacity_1__c + Capacity_2__c + Capacity_3__c)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area per Person (sq ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_1__c</fullName>
        <label>Capacity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_2__c</fullName>
        <label>Capacity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_3__c</fullName>
        <label>Capacity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Capacity_1__c + Capacity_2__c + Capacity_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <label>Goal 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <label>Goal 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <label>Goal 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <formula>if( (If(Goal_1__c =0,0,1) + IF(Goal_2__c =0,0,1)+if(Goal_3__c =0,0,1))&gt;0,(If(Goal_1__c =0,0, Goal_1__c ) + IF(Goal_2__c =0,0,Goal_2__c )+if(Goal_3__c =0,0,Goal_3__c )) 
/ 
(If(Goal_1__c =0,0,1) + IF(Goal_2__c =0,0,1)+if(Goal_3__c =0,0,1)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Cost_per_Seat_1__c</fullName>
        <formula>if( Capacity_1__c &gt;0, Annual_Lease_Cost_straightline_1__c /  Capacity_1__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Cost per Seat 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Cost_per_Seat_2__c</fullName>
        <formula>if( Capacity_2__c&gt;0, Annual_Lease_Cost_straightline_2__c / Capacity_2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Cost per Seat 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Cost_per_Seat_3__c</fullName>
        <formula>if( Capacity_3__c&gt;0, Annual_Lease_Cost_straightline_3__c / Capacity_3__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Cost per Seat 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Cost_per_Seat__c</fullName>
        <formula>if( (If(Lease_Cost_per_Seat_1__c=0,0,1) + IF(Lease_Cost_per_Seat_2__c =0,0,1)+if(Lease_Cost_per_Seat_3__c =0,0,1)) = 0,0, ((If( Lease_Cost_per_Seat_1__c =0,0, Lease_Cost_per_Seat_1__c) + IF(Lease_Cost_per_Seat_2__c =0,0,Lease_Cost_per_Seat_2__c )+if(Lease_Cost_per_Seat_3__c =0,0,Lease_Cost_per_Seat_3__c )) / (If(Lease_Cost_per_Seat_1__c=0,0,1) + IF(Lease_Cost_per_Seat_2__c =0,0,1)+if(Lease_Cost_per_Seat_3__c =0,0,1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Cost per Seat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_1__c</fullName>
        <label>Lease End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_2__c</fullName>
        <label>Lease End Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_3__c</fullName>
        <label>Lease End Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Notice_Days_1__c</fullName>
        <label>Lease Notice (Days) 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Notice_Days_2__c</fullName>
        <label>Lease Notice (Days) 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Notice_Days_3__c</fullName>
        <label>Lease Notice (Days) 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date_1__c</fullName>
        <label>Lease Start Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date_2__c</fullName>
        <label>Lease Start Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date_3__c</fullName>
        <label>Lease Start Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stand Alone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Serviced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <label>Service Provider</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Feet_1__c</fullName>
        <formula>Square_Meter_1__c / 0.09290304</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Feet 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Feet_2__c</fullName>
        <formula>Square_Meter_2__c / 0.09290304</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Feet 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Feet_3__c</fullName>
        <formula>Square_Meter_3__c / 0.09290304</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Feet 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <formula>Square_Feet_1__c + Square_Feet_2__c + Square_Feet_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Meter_1__c</fullName>
        <label>Square Meter 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Meter_2__c</fullName>
        <label>Square Meter 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Meter_3__c</fullName>
        <label>Square Meter 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Meter__c</fullName>
        <formula>Square_Meter_1__c + Square_Meter_2__c + Square_Meter_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Square Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utilization_1__c</fullName>
        <formula>Utilization_Percentage_1__c * Lease_Cost_per_Seat_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilization_2__c</fullName>
        <formula>Utilization_Percentage_2__c * Lease_Cost_per_Seat_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilization_3__c</fullName>
        <formula>Utilization_Percentage_3__c * Lease_Cost_per_Seat_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utilization_Percentage_1__c</fullName>
        <formula>if( Capacity_1__c&gt;0, Actual_Headcount_1__c / Capacity_1__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization % 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_Percentage_2__c</fullName>
        <formula>if( Capacity_2__c &gt;0, Actual_Headcount_2__c / Capacity_2__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization % 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_Percentage_3__c</fullName>
        <formula>if( Capacity_3__c&gt;0, Actual_Headcount_3__c / Capacity_3__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization % 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization_Percentage__c</fullName>
        <formula>(Actual_Headcount_1__c+Actual_Headcount_2__c+Actual_Headcount_3__c) / (Capacity_1__c+Capacity_2__c+Capacity_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <formula>if( (If(Utilization_1__c =0,0,1) + IF(Utilization_2__c =0,0,1)+if(Utilization_3__c =0,0,1))&gt;0,(If( Utilization_1__c =0,0, Utilization_1__c ) + IF(Utilization_2__c =0,0,Utilization_2__c )+if(Utilization_3__c =0,0,Utilization_3__c )) 
/ 
(If(Utilization_1__c =0,0,1) + IF(Utilization_2__c =0,0,1)+if(Utilization_3__c =0,0,1)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>Active_Facilities</fullName>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Office_Type__c</columns>
        <columns>Service_Provider__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Activities__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Facilities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Facilities</fullName>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Office_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Activities__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Facilities</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>